--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -18,6 +18,7 @@
         android:max="10"
         app:seekBarIncrement="1"
         app:selectable="true"
+        app:defaultValue="@integer/default_sensitivity"
         app:dependency="@string/pref_key_enabled" />
 
     <ListPreference
